--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
 </head>
+
+<header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li>About</li>
+            <li>Resume</li>
+            <li>Projects</li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+</header>
+
+
 <body>
-   test 
+   test
 </body>
 </html>
