--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>   
+<header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li>About</li>
+            <li>Resume</li>
+            <li>Projects</li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+</header>
+
+<body>
     <main>
         <section class="hero">
             <div class="hero-text">
