--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li>About</li>
-            <li>Resume</li>
-            <li>Projects</li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="resume.html">Resume</a></li>
+            <li><a href="projects.html">Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
