--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,19 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
+<header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="resume.html">Resume</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+</header>
+
 <body>
     
 </body>
