move header into body

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
+
+<body>
 <header>
     <nav>
         <ul>
@@ -20,7 +22,7 @@
 </header>
 
 
-<body>
-   test
+
+   ><main></main>
 </body>
 </html>
