--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 
 <body>
 <header>
-    <nav>
+    <nav class="nav-bar">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
@@ -21,8 +21,10 @@
     </nav>
 </header>
 
+<main>
+    <div class:
 
+</main>
 
-   ><main></main>
 </body>
 </html>
