--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    
+
 <header>
-    <nav>
+    <nav class="nav-bar">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
@@ -22,7 +22,6 @@
     </nav>
 </header>
 
-
     <main>
         <section class="hero">
             <div class="hero-text">
@@ -31,7 +30,6 @@
                 <form action="contact.html">
                     <button>Contact me</button>
                 </form>
-                <!-- <a href="https://example.com/" class="hero-button">Go to contact</a> -->
             </div>
         </section>
 
