--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
 <body>
 
 <header>
-    <nav>
+    <nav class="nav-bar">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
