--- a/resume.html
+++ b/resume.html
@@ -21,6 +21,15 @@
 </header>
 
 
+<main>
+    <div class="main-container">
+        <div class="resume-pdf">
+            <object data
+            
+        </div>
+    </div>
+</main>
+
     
 </body>
 </html>
