--- a/index.html
+++ b/index.html
@@ -10,30 +10,32 @@
 
 <body>
 
-<header>
-    <nav class="nav-bar">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="resume.html">Resume</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-</header>
+    <header>
+        <nav class="nav-bar">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <main>
-        <section class="hero">
-            <div class="hero-text">
-                <h1>Welcome </h1>
-                <p>Please take a look around</p>
-                <form action="contact.html">
-                    <button>Contact me</button>
-                </form>
-            </div>
-        </section>
-
+        <div class="main-container">
+            <section class="hero">
+                <div class="hero-text">
+                    <h1>Welcome </h1>
+                    <p>Please take a look around</p>
+                    <form action="contact.html">
+                        <button>Contact me</button>
+                    </form>
+                </div>
+            </section>
+        </div>
     </main>
+    <footer>&copy; 2023 Hanna Friberg</footer>
 </body>
 
 </html>
