code to resume.html added

--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,28 +9,44 @@
 </head>
 
 <body>
-<header>
-    <nav class="nav-bar">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="resume.html">Resume</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-</header>
+    <header>
+        <nav class="nav-bar">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
 
-<main>
-    <div class="main-container">
-        <div class="resume-pdf">
-            <object data
-            
+    <main>
+        <div class="main-container">
+            <div class="grid-container">
+                <div class="polariod-img">
+                    <a href="./docs/Hanna Friberg résumé.pdf" target="_blank">
+                        <img src="./img/logo.JPG" alt="resume" class="responsive-image">
+                    </a>
+                    <div class="polariod-container">
+                        <p>My résumé in English</p>
+                        <p>Click on image to enlarge</p>
+                    </div>
+                </div>
+                <div class="polariod-img">
+                    <a href="./docs/Hanna Friberg CV.pdf" target="_blank">
+                        <img src="./img/logo2.jpg" alt="CV" class="responsive-image">
+                    </a>
+                    <div class="polariod-container">
+                        <p>My résumé in Swedish</p>
+                        <p>Click on image to enlarge</p>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-</main>
-
-    
+    </main>
+    <footer>&copy; 2023 Hanna Friberg</footer>
 </body>
+
 </html>
