semantic structure added

--- a/resume.html
+++ b/resume.html
@@ -25,7 +25,7 @@
     <main>
         <div class="main-container">
             <div class="grid-container">
-                <div class="polariod-img">
+                <article class="polariod-img">
                     <a href="./docs/Hanna Friberg résumé.pdf" target="_blank">
                         <img src="./img/logo.JPG" alt="resume" class="responsive-image">
                     </a>
@@ -33,8 +33,9 @@
                         <p>My résumé in English</p>
                         <p>Click on image to enlarge</p>
                     </div>
-                </div>
-                <div class="polariod-img">
+                </article>
+
+                <article class="polariod-img">
                     <a href="./docs/Hanna Friberg CV.pdf" target="_blank">
                         <img src="./img/logo2.jpg" alt="CV" class="responsive-image">
                     </a>
@@ -42,7 +43,7 @@
                         <p>My résumé in Swedish</p>
                         <p>Click on image to enlarge</p>
                     </div>
-                </div>
+                </article>
             </div>
         </div>
     </main>
