project-site code added

--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/9627b2f9a1.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -22,6 +23,28 @@
         </nav>
     </header>
 
+    <main>
+        <div class="main-container">
+
+            <div class="grid-container-project-site">
+                <section class="site-info">
+                    <h2>Check out my work in GitHub by clicking on the icon</h2>
+                    <p>Please keep in mind that my GitHub profile <br>
+                        will continue to evolve and is still a work in
+                        progress</p>
+                </section>
+
+                <section class="github-link">
+                    <a href="https://github.com/friibergs">
+                        <img id="github-logo"
+                            src="https://www.pngarts.com/files/8/Github-Logo-Transparent-Background-PNG.png"
+                            alt="github logo">
+                    </a>
+                </section>
+
+            </div>
+        </div>
+    </main>
 
 
     <footer>&copy; 2023 Hanna Friberg</footer>
