--- a/contact.html
+++ b/contact.html
@@ -25,14 +25,15 @@
     <main>
         <div class="main-container">
 
-            <div class="wrapper">
+            <div class="grid-container-contact-site">
+
 
                 <div class="form-header">
                     <h2>Let's chatt</h2>
                     <p>Leave a message below</p>
                 </div>
 
-                <aside id="wrapper-img">
+                <aside id="wrapper-img" style="align-self: center; justify-self: center;">
                     <img src="./img/opening-email-ss-19200.jpg" alt="emails being sent">
                 </aside>
 
@@ -56,6 +57,7 @@
                         </p>
                         <button id="contact-btn">Send</button>
                     </form>
+
                 </div>
             </div>
         </div>
