--- a/resume.html
+++ b/resume.html
@@ -44,6 +44,8 @@
                     </div>
                 </article>
             </div>
+            <div id="space">
+            </div>
         </div>
     </main>
     <footer>&copy; 2023 Hanna Friberg</footer>
