new index.html and css

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
 
+<body>
     <header>
         <nav class="nav-bar">
             <ul>
@@ -22,17 +22,27 @@
     </header>
 
     <main>
-            <section class="hero">
-                <div class="hero-text">
-                    <h1>Welcome </h1>
-                    <p>Please take a look around</p>
-                    <form action="contact.html">
-                        <button>Contact me</button>
-                    </form>
-                </div>
-            </section>
+        <div class="main-container">
+            <div class="index-container">
+                <section class="grid">
+                    <article class="left-column">
+                        <h2> Welcome</h2>
+                        <p>Please take a look around</p>
+                        <p> .. </p>
+                        <form action="contact.html">
+                            <button>Contact me</button>
+                        </form>
+                    </article>
+                    <article class="right-column">
+                        <img src="./img/DSC00937-Copy7-Copy 7.jpg" alt="profile picture">
+                    </article>
+                </section>
+            </div>
     </main>
+    </div>
+
     <footer>&copy; 2023 Hanna Friberg</footer>
+
 </body>
 
 </html>
