media queries update

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 
 
                 <div class="form-header">
-                    <h2>Let's chatt</h2>
+                    <h2>Let's talk</h2>
                     <p>Leave a message below</p>
                 </div>
 
