new contact.html + css

--- a/contact.html
+++ b/contact.html
@@ -24,44 +24,45 @@
 
     <main>
         <div class="main-container">
+            <div class="contact-container"> 
+                <div class="contact-grid-container">
+                    <section class="centered-section">
+                        <h2>Let's talk</h2>
+                        <p>Leave a message below</p>
+                    </section>
 
-            <div class="grid-container-contact-site">
+                    <section class="form-section">
+                        <div class="form-container">
+                            <form action="">
+                                <p>
+                                    <label for="name">Your name</label>
+                                    <input type="text" id="name" required>
+                                </p>
+                                <p>
+                                    <label for="email">Email address</label>
+                                    <input type="email" id="email" required autocomplete="on">
+                                </p>
+                                <p>
+                                    <label for="Phone">Phone</label>
+                                    <input type="text" id="Phone">
+                                </p>
+                                <p>
+                                    <label for="messege">Write your message</label>
+                                    <textarea name="" id="messege" cols="50" rows="15"></textarea>
+                                </p>
+                                <button>Send</button>
+                            </form>
+                        </div>
+                    </section>
 
-
-                <div class="form-header">
-                    <h2>Let's talk</h2>
-                    <p>Leave a message below</p>
-                </div>
-
-                <aside id="wrapper-img" style="align-self: center; justify-self: center;">
-                    <img src="./img/opening-email-ss-19200.jpg" alt="emails being sent">
-                </aside>
-
-                <div class="form-container">
-                    <form action="">
-                        <p>
-                            <label for="name">Your name</label>
-                            <input type="text" id="name" required>
-                        </p>
-                        <p>
-                            <label for="email">Email address</label>
-                            <input type="email" id="email" required autocomplete="on">
-                        </p>
-                        <p>
-                            <label for="Phone">Phone</label>
-                            <input type="text" id="Phone">
-                        </p>
-                        <p>
-                            <label for="messege">Write your message</label>
-                            <textarea name="" id="messege" cols="50" rows="15"></textarea>
-                        </p>
-                        <button id="contact-btn">Send</button>
-                    </form>
-
+                    <section class="image-section">
+                        <img src="./img/opening-email-ss-1920.jpg" alt="emails being sent">
+                    </section>
                 </div>
             </div>
         </div>
     </main>
+
     <footer>&copy; 2023 Hanna Friberg</footer>
 </body>
 
