--- a/index.html
+++ b/index.html
@@ -39,7 +39,27 @@
                 </section>
             </div>
     </main>
-    </div>
+
+    <aside>
+        <h4>Q&A - for fun</h4>
+        <div class="aside-container">
+            <ul class="items">
+                <li>last meal</li>
+                <li>phobias</li>
+                <li>animal of choice</li>
+                <li>best burger place</li>
+                <li>addictions</li>
+            </ul>
+
+            <ul class="items">
+                <li>steak tartar</li>
+                <li>snakes, frogs & holes</li>
+                <li>dogs</li>
+                <li>babas or krubb</li>
+                <li>coca-cola zero & lundgrens skåne</li>
+            </ul>
+        </div>
+    </aside>
 
     <footer>&copy; 2023 Hanna Friberg</footer>
 
