validation clean up

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 
                     <section class="form-section">
                         <div class="form-container">
-                            <form action="">
+                            <form action="#">
                                 <p>
                                     <label for="name">Your name</label>
                                     <input type="text" id="name" required>
@@ -48,7 +48,7 @@
                                 </p>
                                 <p>
                                     <label for="messege">Write your message</label>
-                                    <textarea name="" id="messege" cols="50" rows="15"></textarea>
+                                    <textarea name="message" id="messege" cols="50" rows="15"></textarea>
                                 </p>
                                 <button>Send</button>
                             </form>
