--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
                         </form>
                     </article>
                     <article class="right-column">
-                        <img src="./img/DSC00937-Copy7-Copy 7.jpg" alt="profile picture">
+                        <img src="./img/DSC00937-Copy7-Copy7.jpg" alt="profile picture">
                     </article>
                 </section>
             </div>
+        </div>
     </main>
 
     <aside>
