--- a/resume.html
+++ b/resume.html
@@ -25,7 +25,7 @@
         <div class="main-container">
             <div class="grid-container">
                 <article class="polariod-img">
-                    <a href="./docs/Hanna Friberg résumé.pdf" target="_blank">
+                    <a href="./docs/Hanna-Friberg-resume.pdf" target="_blank">
                         <img src="./img/logo.JPG" alt="resume" class="responsive-image">
                     </a>
                     <div class="polariod-container">
@@ -35,7 +35,7 @@
                 </article>
 
                 <article class="polariod-img">
-                    <a href="./docs/Hanna Friberg CV.pdf" target="_blank">
+                    <a href="./docs/Hanna-Friberg-CV.pdf" target="_blank">
                         <img src="./img/logo2.jpg" alt="CV" class="responsive-image">
                     </a>
                     <div class="polariod-container">
